<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_blue_gradient">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.SignUpActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="Sign Up"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="70dp"
            android:src="@drawable/sample_profile"/>

        <EditText
            android:id="@+id/username_edit_text"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:layout_gravity="center"
            android:background="@drawable/edit_text_background"
            android:hint="Username"
            android:inputType="text"/>

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:layout_gravity="center"
            android:background="@drawable/edit_text_background"
            android:hint="Email"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/number_edit_text"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:layout_gravity="center"
            android:background="@drawable/edit_text_background"
            android:hint="Phone Number"
            android:inputType="number"
            android:maxLength="14"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submit_sign_up_button"
            android:layout_width="271dp"
            android:layout_height="51dp"
            android:background="@drawable/black_round_btn"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="SIGN UP"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:onClick="SignUpClick"/>

    </LinearLayout>

</ScrollView>