...
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Header -->
        <LinearLayout
            android:id="@+id/Header_Layout"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/user_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:onClick="onViewUserProfile"
                android:src="@drawable/avatar"

...
                android:textStyle="bold" />

        </LinearLayout>

        <!-- Button Icons -->
        <LinearLayout
            android:id="@+id/icon_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginHorizontal="20dp">

            <ImageView
                android:id="@+id/map_icon_img"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:onClick="onMapClick"
                app:srcCompat="@drawable/map_icon"
                android:contentDescription="Map icon"/>

            <ImageView
                android:id="@+id/camera_icon_img"
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:onClick="onCameraClick"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:src="@drawable/camera_icon"
                android:contentDescription="Camera icon: Tap to scan a new QR Code"/>

            <ImageView
                android:id="@+id/leaderboard_icon_img"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:onClick="onLeaderboardClick"
                app:srcCompat="@drawable/leaderboard_icon"
                android:contentDescription="Leaderboard icon: Tap to view the leaderboard" />
        </LinearLayout>


    </LinearLayout>

</ScrollView>
