...
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:layout_gravity="center"
            android:layout_marginTop="65dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_up_button"
            android:layout_width="271dp"
            android:layout_height="51dp"
            android:background="@drawable/black_round_btn"
            android:textColor="@color/white"
            android:text="SIGN UP"
            android:layout_gravity="center"
...
