<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_blue_gradient">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- back btn -->
        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/circle_left_solid"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:onClick="onClickBack"/>

        <TextView
            android:id="@+id/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="Search Results"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:translationY="-40dp"
            android:textStyle="bold" />

        <TableLayout
            android:id="@+id/user_search_result_tbl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="15dp">


        </TableLayout>

    </LinearLayout>
</ScrollView>